<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MidtermIRLChessStart</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_game">&quot;Start Game&quot;</string>
    <string name="title_activity_start_game">StartGame</string>
    <string name="playing_white">&quot;Playing White:&quot;</string>
    <string name="playing_black">&quot;Playing Black:&quot;</string>
    <string name="event">&quot;Event:&quot;</string>
    <string name="location">&quot;Location:&quot;</string>
    <string name="save">&quot;Save&quot;</string>
    <string name="name">&quot;Name:&quot;</string>
    <string name="title_activity_play_game">PlayGame</string>
    <string name="enter_move">&quot;Enter Move&quot;</string>
    <string name="end_game">&quot;End Game&quot;</string>
    <string name="white_to_play">&quot;White to play...&quot;</string>
    <string name="black_to_play">&quot;Black to play…&quot;</string>
    <string name="white_wins">&quot;White Wins!&quot;</string>
    <string name="black_wins">&quot;Black Wins!&quot;</string>

</resources>
