<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartGame" >
 
 	//HEADER 
 	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	
    	>
 	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/start_game"
	        android:textSize="30sp"
	        android:layout_margin="10dp"
	         />
	    
	 </LinearLayout>
    
 	//EVENT

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >
	    
         <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	>
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:textSize="28sp"
		            android:text="@string/event"
		           
		            />
		 </LinearLayout>
		 <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	>
        
	        <EditText
	 	   		android:id="@+id/event_field"
		 	    android:layout_width="match_parent"
		 	    android:layout_height="match_parent"
		 	    android:layout_weight=".6"
		 	    android:ems="10" />
	
	        <Button
	            android:id="@+id/save_event_button"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight=".4"
	            android:text="@string/save" />
	     </LinearLayout>
        
    </LinearLayout>
    
    //LOCATION
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_margin="10dp" 
    	>
	    
         <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	>
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:textSize="28sp"
		            android:text="@string/location"
		           
		            />
		 </LinearLayout>
		 <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	>
        
	        <EditText
	 	   		android:id="@+id/location_field"
		 	    android:layout_width="match_parent"
		 	    android:layout_height="match_parent"
		 	    android:layout_weight=".6"
		 	    android:ems="10" />
	
	        <Button
	            android:id="@+id/save_location_button"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight=".4"
	            android:text="@string/save" />
	     </LinearLayout>
        
    </LinearLayout>
    
    //PLAYING WHITE
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_margin="10dp" 
    	>
	    
         <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	>
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:textSize="28sp"
		            android:text="@string/playing_white"
		           
		            />
		 </LinearLayout>
		 <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	>
        
	        <EditText
	 	   		android:id="@+id/playing_white_field"
		 	    android:layout_width="match_parent"
		 	    android:layout_height="match_parent"
		 	    android:layout_weight=".6"
		 	    android:ems="10" />
	
	        <Button
	            android:id="@+id/save_playing_white_button"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight=".4"
	            android:text="@string/save" />
	     </LinearLayout>
        
    </LinearLayout>
    
    //PLAYING BLACK
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_margin="10dp" 
    	>
	    
         <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	>
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:textSize="28sp"
		            android:text="@string/playing_black"
		           
		            />
		 </LinearLayout>
		 <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	>
        
	        <EditText
	 	   		android:id="@+id/playing_black_field"
		 	    android:layout_width="match_parent"
		 	    android:layout_height="match_parent"
		 	    android:layout_weight=".6"
		 	    android:ems="10" />
	
	        <Button
	            android:id="@+id/save_playing_black_button"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight=".4"
	            android:text="@string/save" />
	     </LinearLayout>
        
    </LinearLayout>
    
    

</LinearLayout>
